--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+breadcrumbs: true # true, false (default)
 words_per_minute: 200
 comments:
   provider: "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification:
 bing_site_verification:
-naver_site_verification:
+naver_site_verification: "19b5c3a11cc244c1417ee60ebaa8fdd2c39dae5a"
 yandex_site_verification:
 baidu_site_verification:
 
