--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 author:
   name: "hyeun427"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "강아지랑 놀고, 고양이랑 놀고, 코딩합니다."
+  bio: "블로그 이사 중입니다!"
   location: "Seoul, Korea"
   email:
   links:
